--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "vitest"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20241216.0",
     "@typescript-eslint/eslint-plugin": "^7.5.0",
     "@typescript-eslint/parser": "^7.5.0",
     "eslint": "^8.57.0",
