--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241216.0",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
     "@typescript-eslint/eslint-plugin": "^7.5.0",
     "@typescript-eslint/parser": "^7.5.0",
     "eslint": "^8.57.0",
@@ -19,14 +21,19 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.2.5",
+    "react-email": "^3.0.4",
     "typescript": "^5.4.3",
     "vitest": "^2.1.8"
   },
   "dependencies": {
+    "@react-email/components": "^0.0.31",
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
     "date-fns": "^4.1.0",
     "hono": "^4.6.14",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "resend": "^4.0.1",
     "wrangler": "^3.95.0"
   }
 }
